# CloudCompare

./: .gitignore  WORKING_BUILD_SCRIPT.sh  WORKING_BUILD_SCRIPT_old.sh
plugins/core/Standard/: CMakeLists.txt
plugins/core/Standard/qSegmenter/: CMakeLists.txt  info.json  qSegmenter.qrc
plugins/core/Standard/qSegmenter/include/: CMakeLists.txt  SeedPicker.h  SegmenterDlg.h  qSegmenter.h
plugins/core/Standard/qSegmenter/src/: ActionA.cpp  CMakeLists.txt  SeedPicker.cpp  SegmenterDlg.cpp  qSegmenter.cpp
plugins/core/Standard/qSegmenter/ui/: CMakeLists.txt  SegmenterDlg.ui
plugins/example/: CMakeLists.txt
